front side pages including prayer time and integration with the api of feed

--- a/app-frontend/lib/l10n/app_am.arb
+++ b/app-frontend/lib/l10n/app_am.arb
@@ -3,8 +3,71 @@
     "appSettings": "የመተግበሪያ ቅንብሮች",
     "language": "ቋንቋ",
     "theme": "ገጽታ",
-    "privacyPolicy": "የግል የሆነ",
+    "privacyPolicy": "የግላዊነት ፖሊሲ",
     "english": "እንግሊዝኛ",
     "amharic": "አማርኛ",
-    "afaanOromo": "አፋን ኦሮሞ"
+    "afaanOromo": "ኦሮምኛ",
+    
+    "navHome": "ዋና ገጽ",
+    "navVideos": "ቪዲዮዎች",
+    "navMovies": "ፊልሞች",
+    "navQiblah": "ቂብላ",
+    "navProfile": "መገለጫ",
+
+    "sectionTrailers": "አዳዲስ ማስታወቂያዎች",
+    "sectionPopularMovies": "ተወዳጅ ፊልሞች",
+    "sectionSeries": "ተከታታይ ፊልሞች",
+    "sectionMusicVideos": "የነሺዳ ቪዲዮዎች",
+    "seeAll": "ሁሉንም ይመልከቱ",
+    "noContent": "ምንም ይዘት የለም",
+
+    "tabPlaylists": "ዝርዝሮች",
+    "tabMovies": "ፊልሞች",
+    "tabSeries": "ተከታታይ",
+    "tabMusicVideos": "ነሺዳ",
+    "tabTrailers": "ማስታወቂያዎች",
+    "searchPlaylists": "ዝርዝሮችን ይፈልጉ...",
+    "noVideosFound": "ምንም ቪዲዮዎች አልተገኙም",
+
+    "libraryTitle": "ቤተ-መጽሐፍት",
+    "noContentFound": "ምንም ይዘት አልተገኘም",
+
+    "qiblahTitle": "የቂብላ አቅጣጫ",
+    "qiblahDirection": "የቂብላ አቅጣጫ",
+    "alignDevice": "ስልክዎን ከካዕባ አቅጣጫ ጋር ያስተካክሉ",
+    "calibrateWarning": "ስልክዎን በ 8 ቅርጽ ያንቀሳቅሱ",
+    "locationFetching": "ቦታ በመፈለግ ላይ...",
+    "locationUnavailable": "ቦታ አልተገኘም",
+    "compassError": "ኮምፓስ መክፈት አልተቻለም",
+    "deviceNotSupported": "ስልክዎ ኮምፓስ አይደግፍም",
+    "retry": "እንደገና ይሞክሩ",
+
+    "profileTitle": "መገለጫ እና ቅንብሮች",
+    "accountSettings": "የመለያ ቅንብሮች",
+    "prayerReminders": "የሶላት ማስታወሻዎች",
+    "logOut": "ውጣ",
+    "logOutConfirmation": "እርግጠኛ ነዎት መውጣት ይፈልጋሉ?",
+    "cancel": "ሰርዝ",
+    "loading": "በመጫን ላይ...",
+    "pleaseWait": "እባክዎ ይጠብቁ",
+    "error": "ስህተት",
+
+    "changePassword": "የይለፍ ቃል ይቀይሩ",
+    "manageSubscription": "የደንበኝነት ምዝገባን ያስተዳድሩ",
+    "deleteAccount": "መለያ ይሰርዙ",
+
+    "reminderSettings": "የማስታወሻ ቅንብሮች",
+    "enableAllReminders": "ሁሉንም ማስታወሻዎች ያብሩ",
+    "notificationBehavior": "የማሳወቂያ ባህሪ",
+    "reminderSound": "የማስታወሻ ድምጽ",
+    "vibration": "ንዝረት",
+    "soundLabel": "ድምጽ",
+
+    "prayerFajr": "ፈጅር",
+    "prayerSunrise": "ፀሐይ መውጫ",
+    "prayerDhuhr": "ዙህር",
+    "prayerAsr": "አስር",
+    "prayerMaghrib": "መግሪብ",
+    "prayerIsha": "ኢሻ",
+    "noData": "ምንም ውሂብ የለም"
 }
