--- a/app-frontend/lib/l10n/app_en.arb
+++ b/app-frontend/lib/l10n/app_en.arb
@@ -6,5 +6,68 @@
     "privacyPolicy": "Privacy Policy",
     "english": "English",
     "amharic": "Amharic",
-    "afaanOromo": "Afaan Oromo"
+    "afaanOromo": "Afaan Oromo",
+    
+    "navHome": "Home",
+    "navVideos": "Videos",
+    "navMovies": "Movies",
+    "navQiblah": "Qiblah",
+    "navProfile": "Profile",
+
+    "sectionTrailers": "New Trailers",
+    "sectionPopularMovies": "Popular Movies",
+    "sectionSeries": "Series",
+    "sectionMusicVideos": "Music Videos",
+    "seeAll": "See All",
+    "noContent": "No content available.",
+
+    "tabPlaylists": "Playlists",
+    "tabMovies": "Movies",
+    "tabSeries": "Series",
+    "tabMusicVideos": "Music Videos",
+    "tabTrailers": "Trailers",
+    "searchPlaylists": "Search playlists...",
+    "noVideosFound": "No videos found.",
+
+    "libraryTitle": "Library",
+    "noContentFound": "No content found.",
+
+    "qiblahTitle": "Qiblah Compass",
+    "qiblahDirection": "Qiblah Direction",
+    "alignDevice": "Align the top of your device with the Kaaba direction",
+    "calibrateWarning": "Wave your device in a figure-8 to calibrate",
+    "locationFetching": "Fetching location...",
+    "locationUnavailable": "Location unavailable",
+    "compassError": "Failed to initialize Qiblah compass",
+    "deviceNotSupported": "Your device does not support compass sensor",
+    "retry": "Retry",
+
+    "profileTitle": "Profile & Settings",
+    "accountSettings": "Account Settings",
+    "prayerReminders": "Prayer Reminders",
+    "logOut": "Log Out",
+    "logOutConfirmation": "Are you sure you want to log out?",
+    "cancel": "Cancel",
+    "loading": "Loading...",
+    "pleaseWait": "Please wait",
+    "error": "Error",
+
+    "changePassword": "Change Password",
+    "manageSubscription": "Manage Subscription",
+    "deleteAccount": "Delete Account",
+
+    "reminderSettings": "Reminder Settings",
+    "enableAllReminders": "Enable All Reminders",
+    "notificationBehavior": "Notification Behavior",
+    "reminderSound": "Reminder Sound",
+    "vibration": "Vibration",
+    "soundLabel": "Sound",
+
+    "prayerFajr": "Fajr",
+    "prayerSunrise": "Sunrise",
+    "prayerDhuhr": "Dhuhr",
+    "prayerAsr": "Asr",
+    "prayerMaghrib": "Maghrib",
+    "prayerIsha": "Isha",
+    "noData": "No data"
 }
