--- a/app-frontend/lib/l10n/app_om.arb
+++ b/app-frontend/lib/l10n/app_om.arb
@@ -1,10 +1,73 @@
 {
     "@@locale": "om",
-    "appSettings": "Sajoo appii",
+    "appSettings": "Qindaa'ina Appii",
     "language": "Afaan",
-    "theme": "Dhimma haasaa",
+    "theme": "Bifa",
     "privacyPolicy": "Imaammata Dhuunfaa",
-    "english": "Afaan Ingilizii",
-    "amharic": "Afaan Amaara",
-    "afaanOromo": "Afaan Oromo"
+    "english": "Ingiliffa",
+    "amharic": "Amaariffa",
+    "afaanOromo": "Afaan Oromoo",
+    
+    "navHome": "Man'ee",
+    "navVideos": "Viidiyoowwan",
+    "navMovies": "Fiilmii",
+    "navQiblah": "Qiblaa",
+    "navProfile": "Piroofayilii",
+
+    "sectionTrailers": "Treelarii Haaraa",
+    "sectionPopularMovies": "Fiilmiiwwan Jaalatamaa",
+    "sectionSeries": "Fiilmii Walitti-fufaa",
+    "sectionMusicVideos": "Viidiyoo Muuziqaa",
+    "seeAll": "Hunda Ilaali",
+    "noContent": "Qabiyyeen hin jiru",
+
+    "tabPlaylists": "Tarree",
+    "tabMovies": "Fiilmii",
+    "tabSeries": "Walitti-fufaa",
+    "tabMusicVideos": "Muuziqaa",
+    "tabTrailers": "Treelarii",
+    "searchPlaylists": "Tarree barbaadi...",
+    "noVideosFound": "Viidiyoon hin argamne",
+
+    "libraryTitle": "Kuusaa",
+    "noContentFound": "Qabiyyeen hin argamne",
+
+    "qiblahTitle": "Koompaasii Qiblaa",
+    "qiblahDirection": "Kallattii Qiblaa",
+    "alignDevice": "Bilbila kee kallattii Kaabaa waliin sirreessi",
+    "calibrateWarning": "Bilbila kee boca 8tiin raasi",
+    "locationFetching": "Bakka barbaadaa jira...",
+    "locationUnavailable": "Bakki hin argamne",
+    "compassError": "Koompaasii banuu hin dandeenye",
+    "deviceNotSupported": "Bilbilli kee koompaasii hin deeggaru",
+    "retry": "Irra deebi'i",
+
+    "profileTitle": "Piroofayilii & Qindaa'ina",
+    "accountSettings": "Qindaa'ina Akkaawuntii",
+    "prayerReminders": "Yaadachiisa Salaataa",
+    "logOut": "Ba'i",
+    "logOutConfirmation": "Dhuguma ba'uu barbaaddaa?",
+    "cancel": "Dhiisi",
+    "loading": "Fe'aa jira...",
+    "pleaseWait": "Maaloo eegi",
+    "error": "Dogoggora",
+
+    "changePassword": "Jecha Darbii Jijjiiri",
+    "manageSubscription": "Kaffaltii To'adhu",
+    "deleteAccount": "Akkaawuntii Haqii",
+
+    "reminderSettings": "Qindaa'ina Yaadachiisaa",
+    "enableAllReminders": "Yaadachiisa Hunda Ban",
+    "notificationBehavior": "Amala Beeksisaa",
+    "reminderSound": "Sagalee Yaadachiisaa",
+    "vibration": "Hollachiisa",
+    "soundLabel": "Sagalee",
+
+    "prayerFajr": "Subii",
+    "prayerSunrise": "Ba'a Biiftuu",
+    "prayerDhuhr": "Zuhurii",
+    "prayerAsr": "Asrii",
+    "prayerMaghrib": "Magriiba",
+    "prayerIsha": "Ishaa'ii",
+    "noData": "Odeeffannoon hin jiru"
 }
