--- a/app-frontend/lib/l10n/app_am.arb
+++ b/app-frontend/lib/l10n/app_am.arb
@@ -69,5 +69,149 @@
     "prayerAsr": "አስር",
     "prayerMaghrib": "መግሪብ",
     "prayerIsha": "ኢሻ",
-    "noData": "ምንም ውሂብ የለም"
+    "noData": "ምንም ውሂብ የለም",
+
+    "generalSettings": "አጠቃላይ ቅንብሮች",
+    "managePreferences": "መለያዎን እና የመተግበሪያ ምርጫዎችን ያስተዳድሩ",
+    "sectionAccount": "መለያ",
+    "generalSettingsTile": "አጠቃላይ ቅንብሮች",
+    "profilePasswordMore": "መገለጫ፣ የይለፍ ቃል እና ሌሎችም",
+    "notificationSettings": "የማሳወቂያ ቅንብሮች",
+    "manageNotificationPreferences": "የማሳወቂያ ምርጫዎችን ያስተዳድሩ",
+    "sectionApp": "መተግበሪያ",
+    "appLanguage": "የመተግበሪያ ቋንቋ",
+    "privacySecurity": "ግላዊነት እና ደህንነት",
+    "managePrivacy": "ግላዊነትዎን ያስተዳድሩ",
+    "sectionOther": "ሌላ",
+    "about": "ስለ እኛ",
+    "signOutSubtitle": "ከመለያዎ ይውጡ",
+    "selectLanguage": "ቋንቋ ይምረጡ",
+
+    "menu": "ሜኑ",
+    "categories": "ምድቦች",
+    "translatedMovies": "ተርጓሚ ፊልሞች",
+    "seriesMovies": "ተከታታይ ፊልሞች",
+    "premiumNesheed": "ፕሪሚየም ነሺዳ",
+    "quranTafseer": "ቁርአን ተፍሲር",
+    "prophetHistory": "የነብያት ታሪክ",
+    "documentaries": "ዶክመንተሪዎች",
+    "alfarukKheber": "አልፋሩቅ ዜና",
+    "yeneMovie": "የኔ ፊልም",
+    "khadim": "ኻዲም",
+    "iqraReadListen": "ኢቅራ - አንብብ እና አዳምጥ",
+    "youtubeContent": "የዩቲዩብ ይዘት",
+    "dawahFree": "ዳዕዋ (ነፃ)",
+    "settings": "ቅንብሮች",
+
+    "service": "አገልግሎት",
+    "donation": "ልገሳ",
+    "supportCauses": "ዓላማዎቻችንን ይደግፉ",
+    "halalGebeya": "ሃላል ገበያ",
+    "islamicMarketplace": "የእስላማዊ ገበያ ቦታ",
+    "eventTickets": "የክስተት ቲኬቶች",
+    "bookEvents": "ለክስተቶች ይመዝገቡ",
+    "ourYoutubePartners": "የዩቲዩብ አጋሮቻችን",
+    "connectCreators": "ከፈጣሪዎች ጋር ይገናኙ",
+    "comingSoon": "በቅርብ ቀን",
+
+    "mosqueLocator": "መስጂድ ፈላጊ",
+    "qiblaFinder": "ቂብላ ፈላጊ",
+    "todaysPrayerTimes": "የዛሬ የሶላት ጊዜያት",
+    "pdfBooks": "ፒዲኤፍ መጽሐፍት",
+    "audioBooks": "ኦዲዮ መጽሐፍት",
+
+    "watchTrailer": "ማስታወቂያ ይመልከቱ",
+    "trailerNotAvailable": "ማስታወቂያ አይገኝም",
+
+    "readMore": "ተጨማሪ ያንብቡ",
+    "readLess": "ያሳንሱ",
+
+    "surah": "ሱራ",
+    "tapToPlay": "ለማጫወት ይንኩ",
+
+    "all": "ሁሉም",
+    "noSheikhsFound": "ምንም ሼኮች አልተገኙም",
+    "surahsAvailable": "ሱራዎች ይገኛሉ",
+
+    "yourSavedMovies": "የእርስዎ የተቀመጡ ፊልሞች",
+    "swipeToSwitch": "ትሮችን ለመቀየር ወደ ግራ/ቀኝ ያንሸራትቱ",
+    "favorites": "ተወዳጆች",
+    "nasheeds": "ነሺዳዎች",
+    "noSavedMovies": "ምንም የተቀመጡ ፊልሞች የሉም",
+    "addMoviesHint": "የዝርዝር አዝራሩን በመጠቀም ፊልሞችን ያክሉ",
+    "noSavedNasheeds": "ምንም የተቀመጡ ነሺዳዎች የሉም",
+    "addNasheedsHint": "የዝርዝር አዝራሩን በመጠቀም ነሺዳዎችን ያክሉ",
+    "noFavoritesYet": "ምንም ተወዳጆች የሉም",
+    "markFavoritesHint": "እዚህ ለማየት ንጥሎችን እንደ ተወዳጅ ምልክት ያድርጉ",
+    "browseContent": "ይዘትን ያስሱ",
+
+    "subscribe": "ሰብስክራይብ",
+    "ourChannels": "የእኛ ቻናሎች",
+    "popularVideos": "ታዋቂ ቪዲዮዎች",
+    "subscribeSubtitle": "ለተጨማሪ ኢስላማዊ ይዘቶች የዩቲዩብ ቻናሎቻችንን ሰብስክራይብ ያድርጉ",
+    "descQuran": "የቁርአን ቲላዋ እና ተፍሲር",
+    "descKnowledge": "ኢስላማዊ እውቀት እና ትምህርት",
+    "descMovies": "ኢስላማዊ ፊልሞች እና ተከታታይ ፊልሞች",
+    "descTalkShow": "ኢስላማዊ የውይይት መድረኮች",
+
+    "bookDetails": "የመጽሐፍ ዝርዝሮች",
+    "unknownAuthor": "ያልታወቀ ደራሲ",
+    "readBook": "መጽሐፍ ያንብቡ",
+    "listenBook": "መጽሐፍ ያዳምጡ",
+    "genre": "ዓይነት",
+    "pages": "ገጾች",
+    "year": "ዓመት",
+    "bookSummary": "የመጽሐፍ ማጠቃለያ",
+    "aboutThisBook": "ስለዚህ መጽሐፍ",
+
+    "iqra": "ኢቅራ",
+    "menu": "ሜኑ",
+    "categories": "ምድቦች",
+
+    "profileInformation": "የመገለጫ መረጃ",
+    "fullName": "ሙሉ ስም",
+    "emailAddress": "ኢሜይል አድራሻ",
+    "currentPassword": "የአሁኑ የይለፍ ቃል",
+    "newPassword": "አዲስ የይለፍ ቃል",
+    "confirmNewPassword": "አዲሱን የይለፍ ቃል ያረጋግጡ",
+    "enterCurrentPassword": "የአሁኑን የይለፍ ቃል ያስገቡ",
+    "enterNewPassword": "አዲስ የይለፍ ቃል ያስገቡ",
+    "confirmNewPasswordHint": "አዲሱን የይለፍ ቃል ያረጋግጡ",
+    "minSixChars": "ቢያንስ 6 ፊደላት",
+    "passwordsDoNotMatch": "የይለፍ ቃሎች አይዛመዱም",
+    "updatePassword": "የይለፍ ቃል አዘምን",
+    "required": "አስፈላጊ",
+    "failedToLoadProfile": "መገለጫ መጫን አልተቻለም",
+
+    "privacyPolicyTitle": "የአል-ፋሩቅ መተግበሪያ የግላዊነት ፖሊሲ",
+    "lastUpdated": "መጨረሻ የተሻሻለው፡ የካቲት 2025",
+    "privacyIntro": "የእርስዎ ግላዊነት ለእኛ አስፈላጊ ነው። ይህ የግላዊነት ፖሊሲ የአል-ፋሩቅ የሞባይል መተግበሪያን ሲጠቀሙ የእርስዎን መረጃ እንዴት እንደምንሰበስብ፣ እንደምንጠቀም እና እንደምንጠብቅ ያብራራል። መተግበሪያውን በመጠቀም፣ በዚህ ፖሊሲ መሠረት መረጃን ለመሰብሰብ እና ለመጠቀም ተስማምተዋል።",
+
+    "companies": "ኩባንያዎች",
+    "trustedOrgs": "ሊደግፏቸው የሚችሉ ታማኝ ድርጅቶች",
+    "urgentCases": "ድንገተኛ ሁኔታዎች",
+    "urgentCasesDesc": "አስቸኳይ ድጋፍ የሚሹ ጉዳዮች",
+    "viewUrgentCases": "ድንገተኛ ጉዳዮችን ይመልከቱ",
+    "supportCommunity": "ማህበረሰባችንን ይደግፉ",
+    "eduPrograms": "የትምህርት ፕሮግራሞች",
+    "healthInitiatives": "የጤና ክብካቤ ውጥኖች",
+    "communitySupport": "የማህበረሰብ ድጋፍ ተነሳሽነት",
+    "youthPrograms": "የወጣቶች ፕሮግራሞች",
+
+    "islamicConference": "እስላማዊ ኮንፈረንስ",
+    "communityGathering": "የማህበረሰብ ስብስብ",
+    "culturalEvent": "ባህላዊ ዝግጅት",
+    "youthFestival": "የወጣቶች ፌስቲቫል",
+
+    "couldNotLaunch": "ሊንኩን መክፈት አልተቻለም",
+
+    "detail": "ዝርዝር",
+    "watchNow": "አሁን ይመልከቱ",
+    "addList": "ዝርዝር ያክሉ",
+    "movieDetails": "የፊልም ዝርዝሮች",
+    "watchFree": "በነፃ ይመልከቱ"
+
+    
+
+
 }
