--- a/app-frontend/lib/l10n/app_en.arb
+++ b/app-frontend/lib/l10n/app_en.arb
@@ -69,5 +69,146 @@
     "prayerAsr": "Asr",
     "prayerMaghrib": "Maghrib",
     "prayerIsha": "Isha",
-    "noData": "No data"
+    "noData": "No data",
+
+    "generalSettings": "General Settings",
+    "managePreferences": "Manage your account and app preferences",
+    "sectionAccount": "ACCOUNT",
+    "generalSettingsTile": "General Settings",
+    "profilePasswordMore": "Profile, password & more",
+    "notificationSettings": "Notification Settings",
+    "manageNotificationPreferences": "Manage notification preferences",
+    "sectionApp": "APP",
+    "appLanguage": "App Language",
+    "privacySecurity": "Privacy & Security",
+    "managePrivacy": "Manage your privacy",
+    "sectionOther": "OTHER",
+    "about": "About",
+    "signOutSubtitle": "Sign out of your account",
+    "selectLanguage": "Select Language",
+    
+    "menu": "Menu",
+    "categories": "Categories",
+    "translatedMovies": "Translated Movies",
+    "seriesMovies": "Series Movies",
+    "premiumNesheed": "Premium Nesheed",
+    "quranTafseer": "Quran Tafseer",
+    "prophetHistory": "Prophet History",
+    "documentaries": "Documentaries",
+    "alfarukKheber": "Alfaruk Kheber",
+    "yeneMovie": "Yene Movie",
+    "khadim": "Khadim",
+    "iqraReadListen": "Iqra - Read & Listen",
+    "youtubeContent": "YouTube Content",
+    "dawahFree": "Dawah (Free)",
+    "settings": "Settings",
+    
+    "service": "Service",
+    "donation": "Donation",
+    "supportCauses": "Support our causes",
+    "halalGebeya": "Halal Gebeya",
+    "islamicMarketplace": "Islamic marketplace",
+    "eventTickets": "Event Tickets",
+    "bookEvents": "Book your events",
+    "ourYoutubePartners": "Our YouTube Partners",
+    "connectCreators": "Connect with creators",
+    "comingSoon": "Coming Soon",
+    
+    "mosqueLocator": "Mosque Locator",
+    "qiblaFinder": "Qibla Finder",
+    "todaysPrayerTimes": "Today's Prayer Times",
+    
+    "pdfBooks": "PDF Books",
+    "audioBooks": "Audio Books",
+
+    "watchTrailer": "Watch Trailer",
+    "trailerNotAvailable": "Trailer not available",
+
+    "readMore": "Read More",
+    "readLess": "Read Less",
+
+    "surah": "Surah",
+    "tapToPlay": "Tap to play",
+
+    "all": "All",
+    "noSheikhsFound": "No Sheikhs found",
+    "surahsAvailable": "Surahs Available",
+
+    "yourSavedMovies": "Your saved movies",
+    "swipeToSwitch": "Swipe left/right to switch tabs",
+    "favorites": "Favorites",
+    "nasheeds": "Nasheeds",
+    "noSavedMovies": "No saved movies",
+    "addMoviesHint": "Add movies using the Add List button",
+    "noSavedNasheeds": "No saved nasheeds",
+    "addNasheedsHint": "Add nasheeds using the Add List button",
+    "noFavoritesYet": "No favorites yet",
+    "markFavoritesHint": "Mark items as favorite to see them here",
+    "browseContent": "Browse Content",
+
+    "subscribe": "Subscribe",
+    "ourChannels": "Our Channels",
+    "popularVideos": "Popular Videos",
+    "subscribeSubtitle": "Subscribe to our YouTube channels for more Islamic content",
+    "descQuran": "Quran recitation and tafsir",
+    "descKnowledge": "Islamic knowledge and education",
+    "descMovies": "Islamic movies and series",
+    "descTalkShow": "Islamic talk shows and discussions",
+
+    "bookDetails": "Book Details",
+    "unknownAuthor": "Unknown Author",
+    "readBook": "Read Book",
+    "listenBook": "Listen Book",
+    "genre": "Genre",
+    "pages": "Pages",
+    "year": "Year",
+    "bookSummary": "Book Summary",
+    "aboutThisBook": "About This Book",
+
+    "iqra": "Iqra",
+    "menu": "Menu",
+    "categories": "Categories",
+
+    "profileInformation": "Profile Information",
+    "fullName": "Full Name",
+    "emailAddress": "Email Address",
+    "currentPassword": "Current Password",
+    "newPassword": "New Password",
+    "confirmNewPassword": "Confirm New Password",
+    "enterCurrentPassword": "Enter current password",
+    "enterNewPassword": "Enter new password",
+    "confirmNewPasswordHint": "Confirm new password",
+    "minSixChars": "Min 6 chars",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "updatePassword": "Update Password",
+    "required": "Required",
+    "failedToLoadProfile": "Failed to load profile",
+
+    "privacyPolicyTitle": "Privacy Policy for AL FARUK App",
+    "lastUpdated": "Last updated: February, 2025",
+    "privacyIntro": "Your privacy is important to us. This privacy policy explains how we collect, use, and protect your information when you use the AL FARUK mobile application (the \"App\"). By using the App, you agree to the collection and use of information in accordance with this policy.",
+
+    "companies": "Companies",
+    "trustedOrgs": "Trusted organizations you can support",
+    "urgentCases": "Urgent Cases",
+    "urgentCasesDesc": "Urgent cases needing immediate support",
+    "viewUrgentCases": "View Urgent Cases",
+    "supportCommunity": "Support our community",
+    "eduPrograms": "Educational programs",
+    "healthInitiatives": "Healthcare initiatives",
+    "communitySupport": "Community support initiatives",
+    "youthPrograms": "Youth programs",
+
+    "islamicConference": "Islamic conference",
+    "communityGathering": "Community gathering",
+    "culturalEvent": "Cultural event",
+    "youthFestival": "Youth festival",
+
+    "couldNotLaunch": "Could not open link",
+
+    "detail": "Detail",
+    "watchNow": "WATCH NOW",
+    "addList": "Add List",
+    "movieDetails": "Movie Details",
+    "watchFree": "WATCH FREE"
 }
