--- a/app-frontend/lib/l10n/app_om.arb
+++ b/app-frontend/lib/l10n/app_om.arb
@@ -69,5 +69,142 @@
     "prayerAsr": "Asrii",
     "prayerMaghrib": "Magriiba",
     "prayerIsha": "Ishaa'ii",
-    "noData": "Odeeffannoon hin jiru"
+    "noData": "Odeeffannoon hin jiru",
+
+    "generalSettings": "Qindaa'ina Waliigalaa",
+    "managePreferences": "Filannoo akkaawuntii fi appii kee to'adhu",
+    "sectionAccount": "AKKAAWUNTII",
+    "generalSettingsTile": "Qindaa'ina Waliigalaa",
+    "profilePasswordMore": "Piroofayilii, jecha darbii fi kkf",
+    "notificationSettings": "Qindaa'ina Beeksisaa",
+    "manageNotificationPreferences": "Filannoo beeksisaa to'adhu",
+    "sectionApp": "APPII",
+    "appLanguage": "Afaan Appii",
+    "privacySecurity": "Imaammata Dhuunfaa & Nageenya",
+    "managePrivacy": "Imaammata dhuunfaa to'adhu",
+    "sectionOther": "KAN BIROO",
+    "about": "Waa'ee Keenya",
+    "signOutSubtitle": "Akkaawuntii kee keessaa ba'i",
+    "selectLanguage": "Afaan Filadhu",
+
+    "menu": "Baafata",
+    "categories": "Ramaddii",
+    "translatedMovies": "Fiilmiiwwan Hiikaman",
+    "seriesMovies": "Fiilmii Walitti-fufaa",
+    "premiumNesheed": "Nashiidaa Filatamaa",
+    "quranTafseer": "Tafsiira Qur'aanaa",
+    "prophetHistory": "Seenaa Nabiyyootaa",
+    "documentaries": "Dokimeentarii",
+    "alfarukKheber": "Oduu Al-Faruk",
+    "yeneMovie": "Yene Movie",
+    "khadim": "Khadim",
+    "iqraReadListen": "Iqra - Dubbisi Dhaggeeffadhu",
+    "youtubeContent": "Qabiyyee Yuutuubii",
+    "dawahFree": "Da'awaa (Bilisa)",
+    "settings": "Qindaa'ina",
+
+    "service": "Tajaajila",
+    "donation": "Gargaarsa",
+    "supportCauses": "Kaayyoo keenya deeggaraa",
+    "halalGebeya": "Gabaa Halaalaa",
+    "islamicMarketplace": "Gabaa Islaamaa",
+    "eventTickets": "Tikkeettii Sagantaa",
+    "bookEvents": "Sagantaalee qabadhaa",
+    "ourYoutubePartners": "Michoota Yuutuubii Keenya",
+    "connectCreators": "Oomishtoota wajjin wal-qunnamaa",
+    "comingSoon": "Dhihootti Eegaa",
+
+    "mosqueLocator": "Masjiida Barbaadi",
+    "qiblaFinder": "Qiblaa Barbaadi",
+    "todaysPrayerTimes": "Yeroo Salaataa Har'aa",
+    
+    "pdfBooks": "Kitaabota PDF",
+    "audioBooks": "Kitaabota Sagalee",
+
+    "watchTrailer": "Treelarii Ilaali",
+    "trailerNotAvailable": "Treelariin hin jiru",
+    "readMore": "Dabalata Dubbisi",
+    "readLess": "Gabaabsi",
+
+    "surah": "Suuraa",
+    "tapToPlay": "Taphaaf Tuqi",
+    "all": "Hunda",
+    "noSheikhsFound": "Sheekoonni hin argamne",
+    "surahsAvailable": "Suuraawwan jiran",
+
+    "yourSavedMovies": "Fiilmiiwwan kee olkaa'aman",
+    "swipeToSwitch": "Tabii jijjiiruuf gara bitaa/mirgaatti harkisi",
+    "favorites": "Jaalatamaa",
+    "nasheeds": "Nashiidaa",
+    "noSavedMovies": "Fiilmiin olkaa'ame hin jiru",
+    "addMoviesHint": "Qabduu fayyadamuun fiilmii dabali",
+    "noSavedNasheeds": "Nashiidaan olkaa'ame hin jiru",
+    "addNasheedsHint": "Qabduu fayyadamuun nashiidaa dabali",
+    "noFavoritesYet": "Wanti jaalatame hin jiru",
+    "markFavoritesHint": "Asitti arguuf akka jaalatamaatti filadhu",
+    "browseContent": "Qabiyyee Ilaali",
+
+    "subscribe": "Sabiskiraayibii",
+    "ourChannels": "Chaanaalota Keenya",
+    "popularVideos": "Viidiyoowwan Jaalatamaa",
+    "subscribeSubtitle": "Qabiyyee Islaamaa dabalataaf chaanaalii Yuutuubii keenya hordofaa",
+    "descQuran": "Qaraatii Qur'aanaa fi Tafsiira",
+    "descKnowledge": "Beekumsa Islaamaa fi Barnoota",
+    "descMovies": "Fiilmiiwwan Islaamaa fi Walitti-fufaa",
+    "descTalkShow": "Mariiwwan Islaamaa",
+
+    "bookDetails": "Bal'ina Kitaabaa",
+    "unknownAuthor": "Barreessaan hin beekamu",
+    "readBook": "Kitaaba Dubbisi",
+    "listenBook": "Kitaaba Dhaggeeffadhu",
+    "genre": "Gosa",
+    "pages": "Fuula",
+    "year": "Waggaa",
+    "bookSummary": "Guduunfaa Kitaabaa",
+    "aboutThisBook": "Waa'ee Kitaaba Kanaa",
+
+    "iqra": "Iqraa",
+
+    "privacyPolicyTitle": "Imaammata Dhuunfaa Appii AL FARUK",
+    "lastUpdated": "Yeroo dhumaaf kan fooyya'e: Guraandhala, 2025",
+    "privacyIntro": "Iccitiin keessan nuuf barbaachisaa dha. Imaammatni dhuunfaa kun yeroo isin appii mobaayilaa AL FARUK fayyadamtan odeeffannoo keessan akkamitti akka walitti qabnu, itti fayyadamnuu fi eegnu ibsa. Appicha fayyadamuudhaan, imaammata kana bu'uura godhachuun odeeffannoo walitti qabuu fi itti fayyadamuuf walii galtu.",
+
+    "companies": "Dhaabbilee",
+    "trustedOrgs": "Dhaabbilee amanamoo deeggaruu dandeessan",
+    "urgentCases": "Dhimmoota Ariifachiisaa",
+    "urgentCasesDesc": "Dhimmoota deeggarsa hatattamaa barbaadan",
+    "viewUrgentCases": "Dhimmoota Ariifachiisaa Ilaali",
+    "supportCommunity": "Hawaasa keenya deeggaraa",
+    "eduPrograms": "Sagantaalee barnootaa",
+    "healthInitiatives": "Tattaaffii fayyaa",
+    "communitySupport": "Tattaaffii deeggarsa hawaasaa",
+    "youthPrograms": "Sagantaalee dargaggootaa",
+
+    "islamicConference": "Konfiraansii Islaamaa",
+    "communityGathering": "Wal-gahiinsa Hawaasaa",
+    "culturalEvent": "Qophii Aadaa",
+    "youthFestival": "Festiivaalii Dargaggootaa",
+
+    "couldNotLaunch": "Liinkii banuun hin danda'amne",
+
+    "profileInformation": "Odeeffannoo Piroofayilii",
+    "fullName": "Maqaa Guutuu",
+    "emailAddress": "Teessoo Iimeilii",
+    "currentPassword": "Jecha Darbii Ammaa",
+    "newPassword": "Jecha Darbii Haaraa",
+    "confirmNewPassword": "Jecha Darbii Haaraa Mirkaneessi",
+    "enterCurrentPassword": "Jecha darbii ammaa galchi",
+    "enterNewPassword": "Jecha darbii haaraa galchi",
+    "confirmNewPasswordHint": "Jecha darbii haaraa mirkaneessi",
+    "minSixChars": "Yoo xiqqaate qubee 6",
+    "passwordsDoNotMatch": "Jechootni darbii wal hin simne",
+    "updatePassword": "Jecha Darbii Haaromsi",
+    "required": "Dirqama",
+    "failedToLoadProfile": "Piroofayilii fe'uu hin dandeenye",
+
+    "detail": "Bal'ina",
+    "watchNow": "AMMA ILAALI",
+    "addList": "Tarree Dabali",
+    "movieDetails": "Bal'ina Fiilmii",
+    "watchFree": "BILISAAN ILAALI"
 }
